--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <script src="https://kit.fontawesome.com/90351be748.js" crossorigin="anonymous"></script>
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/metaImg.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta name="description" content="He thinks he's straight, but he's not. Let's find out..." />
+        <!-- Primary Meta Tags -->
+        <title>Are you gay ?</title>
+        <meta name="title" content="Are you gay ?" />
+        <meta name="description" content="He thinks he's straight, but he's not. Let's find out we our quizz." />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://are-you.gay/" />
+        <meta property="og:title" content="Are you gay ?" />
+        <meta property="og:description" content="He thinks he's straight, but he's not. Let's find out we our quizz." />
+        <meta property="og:image" content="%PUBLIC_URL%/metImg.jpg" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://are-you.gay/" />
+        <meta property="twitter:title" content="Are you gay ?" />
+        <meta property="twitter:description" content="He thinks he's straight, but he's not. Let's find out we our quizz." />
+        <meta property="twitter:image" content="%PUBLIC_URL%/metaImg.jpg" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+        <script src="https://kit.fontawesome.com/90351be748.js" crossorigin="anonymous"></script>
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/metaImg.jpg" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+    </body>
 </html>
